performance-subtitle fixed overflow

--- a/DatabaseProject/static/assets/css/index.css
+++ b/DatabaseProject/static/assets/css/index.css
@@ -287,6 +287,7 @@ a{
     font-size: var(--titulo-28);
     letter-spacing: -0.48px;
     opacity: 60%;
+    padding: 0 1rem 0 1rem;
 }
 
 .container-performance{
